# artifact-loader

./: Cargo.toml  README.md  flake.nix
src/: config.rs  downloader.rs  main.rs  utils.rs
