[package]
name = "artifact-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
aws-config = "1.5"
aws-sdk-s3 = "1.67"
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.8"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
nix = { version = "0.29", features = ["fs", "user"] }
sha2 = "0.10"
hex = "0.4"
